# misc

./: README.md  misc.7z
Thrift/: server.cpp  shared.thrift  tutorial.thrift
Thrift/cpp/: CMakeLists.txt  Makefile.am
Thrift/gen-cpp/: tutorial_types.cpp  tutorial_types.h
